[package]
name = "tame-oauth"
version = "0.9.6"
authors = [
    "Embark <opensource@embark-studios.com>",
    "Jake Shadle <jake.shadle@embark-studios.com>",
]
edition = "2018"
description = "A (very) simple oauth 2.0 library"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/tame-oauth"
homepage = "https://github.com/EmbarkStudios/tame-oauth"
repository = "https://github.com/EmbarkStudios/tame-oauth"
keywords = ["oauth", "tame", "sans-io", "gcp"]
categories = ["authentication"]
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

[lib]
doctest = false
path = "src/lib.rs"

[features]
# This library was first created to support GCP oauth, if we add support for
# other oauth providers this will most likely change to not have any default features
default = ["gcp"]
# Supports for GCP oauth2
gcp = ["jwt", "url"]
# Support for Json Web Tokens, ring is used for signing
jwt = ["openssl"]

[dependencies]
data-encoding = "2.4"
http = "0.2"
lock_api = "0.4"
parking_lot = "0.11"
openssl = { version = "0.10", optional = true }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
twox-hash = { version = "1.5.0", default-features = false }
url = { version = "2.2", optional = true }

[dev-dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls"]

[dev-dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]

[dev-dependencies.bytes]
version = "1.4"
